--- a/notas/sesion-7.ipynb
+++ b/notas/sesion-7.ipynb
@@ -36,6 +36,7 @@
     "        self.frutas.append(nombre)\r\n",
     "    \r\n",
     "    def getFrutasDistintas(self):\r\n",
+    "        # set(...) - conjunto(...)\r\n",
     "        frutas_distintas = list(set(self.frutas))\r\n",
     "        return frutas_distintas\r\n",
     "    \r\n",
@@ -57,6 +58,75 @@
       "['manzana', 'pera', 'mango', 'manzana']\n",
       "['mango', 'pera', 'manzana']\n"
      ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "frutas = [\"manzana\", \"pera\", \"manzana\", \"pera\", \"pera\"]\r\n",
+    "\r\n",
+    "set(frutas)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'manzana', 'pera'}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "list(set(frutas))"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['pera', 'manzana']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "a = [1, 2, 3]\r\n",
+    "b = [1, 2, 2]\r\n",
+    "\r\n",
+    "c = []\r\n",
+    "c.extend(a)\r\n",
+    "c.extend(b)\r\n",
+    "\r\n",
+    "set(c)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{1, 2, 3}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
     }
    ],
    "metadata": {}
