--- a/100_problemas.ipynb
+++ b/100_problemas.ipynb
@@ -1183,6 +1183,418 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 11. Extraer los datos de una hoja de Excel\r\n",
+    "\r\n",
+    "Los documentos de excel son llamados también Libros y se componen de hojas. Una hoja de excel es similar a un archivo CSV, con la diferencia que las columnas están nombradas de la `A` a la `ZZ` y las filas también.\r\n",
+    "\r\n",
+    "En python podemos acceder a los datos de una hoja de excel incluso en una región específica, por ejemplo, de tal fila y tal columna."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "import pandas as pd\r\n",
+    "import openpyxl\r\n",
+    "\r\n",
+    "df_hoja_1_gastos = pd.read_excel(\"datos/Libro.xlsx\", sheet_name=\"Hoja1\", engine=\"openpyxl\", usecols=\"B:D\", skiprows=2)\r\n",
+    "\r\n",
+    "df_hoja_1_gastos"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Etiqueta</th>\n",
+       "      <th>Monto</th>\n",
+       "      <th>Fecha</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PAPAS</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2021-06-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>REFRESCO</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2021-06-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>GALLETAS</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2021-06-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PAPAS</td>\n",
+       "      <td>80</td>\n",
+       "      <td>2021-06-19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Etiqueta  Monto      Fecha\n",
+       "0     PAPAS     13 2021-06-12\n",
+       "1  REFRESCO     15 2021-06-13\n",
+       "2  GALLETAS     14 2021-06-13\n",
+       "3     PAPAS     80 2021-06-19"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "source": [
+    "df_hoja_1_compras = pd.read_excel(\"datos/Libro.xlsx\", sheet_name=\"Hoja1\", engine=\"openpyxl\", usecols=\"K:M\", skiprows=2)\r\n",
+    "\r\n",
+    "df_hoja_1_compras"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Etiqueta.1</th>\n",
+       "      <th>Monto.1</th>\n",
+       "      <th>Fecha.1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GANSITO</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>2021-07-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>COCO</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>2021-07-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Etiqueta.1  Monto.1    Fecha.1\n",
+       "0    GANSITO     18.0 2021-07-17\n",
+       "1       COCO     23.0 2021-07-18\n",
+       "2        NaN      NaN        NaT\n",
+       "3        NaN      NaN        NaT"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "source": [
+    "df_hoja_2_etiquetas = pd.read_excel(\"datos/Libro.xlsx\", sheet_name=\"Hoja2\", engine=\"openpyxl\", usecols=\"A:D\", skiprows=0)\r\n",
+    "\r\n",
+    "df_hoja_2_etiquetas"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Etiqueta</th>\n",
+       "      <th>Descripcion</th>\n",
+       "      <th>Cantidad</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PAPAS</td>\n",
+       "      <td>Todo lo que son fritas</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>REFRESCO</td>\n",
+       "      <td>Todas las bebidas con gas</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Etiqueta                Descripcion  Cantidad  Total\n",
+       "0     PAPAS     Todo lo que son fritas       NaN    NaN\n",
+       "1  REFRESCO  Todas las bebidas con gas       NaN    NaN"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "source": [
+    "for etiqueta in df_hoja_2_etiquetas[\"Etiqueta\"]:\r\n",
+    "    gastos = df_hoja_1_gastos.query(f\"Etiqueta == '{etiqueta}'\")\r\n",
+    "    cantidad = len(gastos)\r\n",
+    "    total = sum(gastos[\"Monto\"])\r\n",
+    "    print(etiqueta, cantidad, total)\r\n",
+    "    index_etiqueta = list(df_hoja_2_etiquetas[\"Etiqueta\"]).index(etiqueta)\r\n",
+    "    df_hoja_2_etiquetas.at[index_etiqueta, \"Cantidad\"] = cantidad\r\n",
+    "    df_hoja_2_etiquetas.at[index_etiqueta, \"Total\"] = total\r\n",
+    "    \r\n",
+    "df_hoja_2_etiquetas"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "PAPAS 2 93\n",
+      "REFRESCO 1 15\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Etiqueta</th>\n",
+       "      <th>Descripcion</th>\n",
+       "      <th>Cantidad</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PAPAS</td>\n",
+       "      <td>Todo lo que son fritas</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>93.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>REFRESCO</td>\n",
+       "      <td>Todas las bebidas con gas</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Etiqueta                Descripcion  Cantidad  Total\n",
+       "0     PAPAS     Todo lo que son fritas       2.0   93.0\n",
+       "1  REFRESCO  Todas las bebidas con gas       1.0   15.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 12. Escribir los datos en una hoja de Excel\r\n",
+    "\r\n",
+    "En python podemos escribir de vuelta sobre una hoja, para actualizar o agregar nuevos valores."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "source": [
+    "writer = pd.ExcelWriter('datos/Libro.xlsx')\r\n",
+    "\r\n",
+    "df_hoja_1_gastos.to_excel(writer, sheet_name=\"Hoja1\", startcol=1, startrow=3, index=None, engine=\"openpyxl\", merge_cells=True)\r\n",
+    "df_hoja_1_compras.to_excel(writer, sheet_name=\"Hoja1\", startcol=10, startrow=3, index=None, engine=\"openpyxl\", merge_cells=True)\r\n",
+    "df_hoja_2_etiquetas.to_excel(writer, sheet_name=\"Hoja2\", startcol=0, startrow=0, index=None, engine=\"openpyxl\", merge_cells=True)\r\n",
+    "\r\n",
+    "writer.close()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 13. Colocar una gráfica en una hoja de Excel"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 14. Escribir una tabla en el reporte PDF"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 15. Escribir un ticket de venta en reporte PDF"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 16. Extraer datos de un log de sistema"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 17. Graficar dos series en barras comparativas"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 18. Reespaldo de tablas en MySQL"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 19. Reespaldo de colecciones en Mongo DB"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 20. Enviar un Correo Electrónico"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- Desarrollo de APIs e Interfaces Web (Flask)\r\n",
+    "- Automatización de Comandos del Sistema Operativo (OS)\r\n",
+    "* Pruebas Web Automatizadas (Selenium)"
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
