--- a/100_problemas.ipynb
+++ b/100_problemas.ipynb
@@ -1595,6 +1595,282 @@
     "* Pruebas Web Automatizadas (Selenium)"
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 21. Montar un servidor web\r\n",
+    "\r\n",
+    "Los servidores web son programas que se mantienen prendidos y son capaces de recibir peticiones mediante el protocolo HTTP, estas peticiones generalmente son solicitudes para acceder a recursos de la máquina dónde opera el servidor, por ejemplo, consultas de la base de datos, archivos, o información computada.\r\n",
+    "\r\n",
+    "En python podemos usar la librería de `Flask` para montar un servidor que procese las peteciones de los usuarios. \r\n",
+    "\r\n",
+    "Por ejemplo, un usuario desea consumir la url `http://localhost:5000/api/productos`, `http://localhost:5000/api/reporte.pdf` `http://localhost:5000/api/grafica.png` o `http://localhost:5000/productos.html`."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "! python -m pip install flask"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "from flask import Flask # 1.1.2\r\n",
+    "\r\n",
+    "app = Flask(__name__)\r\n",
+    "\r\n",
+    "@app.get(\"/\")\r\n",
+    "def home():\r\n",
+    "    return \"Hola Flask\"\r\n",
+    "\r\n",
+    "app.run() # localhost:5000"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "__call__() missing 1 required positional argument: 'start_response'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-2a90587c5603>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mapp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mFlask\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m__name__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;33m@\u001b[0m\u001b[0mapp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"/\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mhome\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[1;34m\"Hola Flask\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: __call__() missing 1 required positional argument: 'start_response'"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 21. Recibir los parámetros de consulta"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "from flask import request\r\n",
+    "\r\n",
+    "@app.get(\"/api/productos\") # locahost:5000/api/productos?min_precio=<float>\r\n",
+    "def get_productos():\r\n",
+    "    min_precio = request.args.get(\"min_precio\")\r\n",
+    "    \r\n",
+    "    if not min_precio:\r\n",
+    "        min_precio = 0\r\n",
+    "    else:\r\n",
+    "        min_precio = float(min_precio)\r\n",
+    "    \r\n",
+    "    productos = [\r\n",
+    "        {\r\n",
+    "            \"nombre\": \"Coca Cola\",\r\n",
+    "            \"precio\": 16.5\r\n",
+    "        },\r\n",
+    "        {\r\n",
+    "            \"nombre\": \"Galletas\",\r\n",
+    "            \"precio\": 18.99\r\n",
+    "        },\r\n",
+    "    ]\r\n",
+    "    \r\n",
+    "    # [ <element> for <element> in <sequence> [if <condition>] ]\r\n",
+    "    # [x * 2 for x in range(20, 51)] # [40, 42, 44, 46, ..., 98, 50]\r\n",
+    "    productos_filtrados = [ producto for producto in productos if producto[\"precio\"] >= min_precio ]\r\n",
+    "    \r\n",
+    "    return {\r\n",
+    "        \"productos\": productos_filtrados\r\n",
+    "    }"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 22. Crear una Aplicación Web con Flask\r\n",
+    "\r\n",
+    "Las aplicaciones web se basan en estructuras HTML estilizadas con CSS y controladas por javascript. Sin embargo, existen opciones para construir los HTML y CSS sin la dependencia completa a javascript, de tal forma que otros lenguajes pueden generar los códigos html del lado del servidor a fin de mostrarsélos al usuario.\r\n",
+    "\r\n",
+    "En python podemos renderizar (visualizar/pintar) páginas web generadas a partir de plantillas y datos del programa.\r\n",
+    "\r\n",
+    "Por ejemplo, podemos crear una tarjeta del clima con los datos del servidor."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "from flask import Flask, render_template\r\n",
+    "import random\r\n",
+    "\r\n",
+    "app = Flask(__name__)\r\n",
+    "\r\n",
+    "@app.get(\"/\")\r\n",
+    "def get_home():\r\n",
+    "    return render_template(\"index.html\")\r\n",
+    "\r\n",
+    "@app.get(\"/clima\")\r\n",
+    "def get_clima():\r\n",
+    "    # TODO: Obtener los valores actuales del clima\r\n",
+    "    \r\n",
+    "    temperatura = random.uniform(0, 38)\r\n",
+    "    humedad = random.uniform(20, 98)\r\n",
+    "    \r\n",
+    "    ciudades = [\r\n",
+    "        {\r\n",
+    "            \"nombre\": \"CDMX\",\r\n",
+    "            \"temperatura\": random.uniform(17, 27),\r\n",
+    "            \"humedad\": random.uniform(45, 67)\r\n",
+    "        },\r\n",
+    "        {\r\n",
+    "            \"nombre\": \"Monterrey\",\r\n",
+    "            \"temperatura\": random.uniform(26, 42),\r\n",
+    "            \"humedad\": random.uniform(20, 50)\r\n",
+    "        },\r\n",
+    "        {\r\n",
+    "            \"nombre\": \"Guadalajara\",\r\n",
+    "            \"temperatura\": random.uniform(20, 30),\r\n",
+    "            \"humedad\": random.uniform(50, 70)\r\n",
+    "        },\r\n",
+    "    ]\r\n",
+    "    \r\n",
+    "    return render_template(\"clima.html\", temperatura=temperatura, humedad=humedad, ciudades=ciudades)\r\n",
+    "\r\n",
+    "app.run()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 23. Manejo de hilos\r\n",
+    "\r\n",
+    "Las tareas que se realizan en un programa generalmente se ejecutan en el hilo principal (proceso principal). Este proceso digamos que ejecuta instrucción por instrucción nuestro programa. Haciendo que la siguiente instrucción tenga que esperarse a que la anterior se complete.\r\n",
+    "\r\n",
+    "En python podemos crear `hilos` para ejecutar procesos independientes al principal y por ejemplo, monitorear datos, escribir archivos, recopilar datos, etc. Sin que estos bloqueen el proceso principal u otros procesos.\r\n",
+    "\r\n",
+    "Por ejemplo, una función que cada 20s consulte el clima desde algún API y actualice los datos gloabales a todas las funciones. De esta manera, podríamos crear una aplicación (un API) que proveea el clima con un máximo de retraso de 20 segundos. Esto haría más eficiente el programa, ya que si recibimos en el servidor 1000 peticiones de 1000 usuarios, no tenemos que hacer 1000 consultas en tiempo real del clima (saturando al sistema). Sino que a cada usuario se le respondería con el clima guardado de forma global, y el cuál está siendo actualizado de forma independiente cada 20 segundos.\r\n",
+    "\r\n",
+    "Esta técnica se puede utilizar para consultas a bases de datos, llamadas a APIs  y escritura de reportes sin tener que hacer las operaciones en tiempo real, sino más bien serían tareas programadas. Se podrían programar para ser lanzadas cada tantos segundos, minutos, horas, días, etc."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "source": [
+    "from threading import Thread\r\n",
+    "from time import sleep\r\n",
+    "import random\r\n",
+    "\r\n",
+    "contexto = {\r\n",
+    "    \"contador\": 0,\r\n",
+    "    \"temperatura\": 30\r\n",
+    "}\r\n",
+    "\r\n",
+    "def task1():\r\n",
+    "    while contexto[\"contador\"] < 5:\r\n",
+    "        print(f\"[TAREA 1] {contexto['contador']}\")\r\n",
+    "        contexto[\"contador\"] += 1\r\n",
+    "        sleep(4)\r\n",
+    "\r\n",
+    "def task2():\r\n",
+    "    while contexto[\"contador\"] < 4:\r\n",
+    "        print(f\"[TAREA 2] {contexto['temperatura']}\")\r\n",
+    "        contexto[\"temperatura\"] = contexto[\"temperatura\"] + contexto[\"contador\"] * random.uniform(-1, 1)\r\n",
+    "        sleep(10)\r\n",
+    "\r\n",
+    "t1 = Thread(target=task1)\r\n",
+    "t2 = Thread(target=task2)\r\n",
+    "\r\n",
+    "t1.start()\r\n",
+    "t2.start()\r\n",
+    "\r\n",
+    "t1.join()\r\n",
+    "t2.join()"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[TAREA 1] 0\n",
+      "[TAREA 2] 30\n",
+      "[TAREA 1] 1\n",
+      "[TAREA 1] 2\n",
+      "[TAREA 2] 29.551348760839534\n",
+      "[TAREA 1] 3\n",
+      "[TAREA 1] 4\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 24. Datos del servidor actualizados mediante un hilo\r\n",
+    "\r\n",
+    "Podemos definir un hilo que controle la actualización de los datos de un contexto, para que el servidor se base en ellos. Por ejemplo, un hilo podría detectar los valores de múltiples sensores para una estación de monitoreo, haciendo que los usuarios vean los últimos valores recolectados. Estos es ideal para cuándo los valores provienen de dispositivos que extraen los datos desde sensores que no pueden ser consultados en tiempo real, por ejemplo, si llamamos al sensor de movimiento en tiempo real (cuándo consulte el usuario), podríamos bloquearlo si dos usuarios consultaran al mismo tiempo."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "from flask import Flask\r\n",
+    "from threading import Thread\r\n",
+    "from time import sleep\r\n",
+    "import random\r\n",
+    "\r\n",
+    "context = {\r\n",
+    "    \"on\": True,\r\n",
+    "    \"temperatura\": 0,\r\n",
+    "    \"humedad\": 0,\r\n",
+    "    \"distancia_1\": 0,\r\n",
+    "    \"distancia_2\": 0,\r\n",
+    "    \"rotacion_x\": 0,\r\n",
+    "    \"rotacion_y\": 0,\r\n",
+    "    \"rotacion_z\": 0,\r\n",
+    "}\r\n",
+    "\r\n",
+    "def read_sensors():\r\n",
+    "    while context[\"on\"]:\r\n",
+    "        context[\"temperatura\"] = random.uniform(0, 50)\r\n",
+    "        context[\"humedad\"] = random.uniform(0, 100)\r\n",
+    "        context[\"distancia_1\"] = random.uniform(0, 200)\r\n",
+    "        context[\"distancia_2\"] = random.uniform(0, 200)\r\n",
+    "        context[\"rotacion_x\"] = random.uniform(-90, 90)\r\n",
+    "        context[\"rotacion_y\"] = random.uniform(-90, 90)\r\n",
+    "        context[\"rotacion_z\"] = random.uniform(-90, 90)\r\n",
+    "        sleep(10)\r\n",
+    "\r\n",
+    "app = Flask(__name__)\r\n",
+    "\r\n",
+    "t = Thread(target=read_sensors)\r\n",
+    "\r\n",
+    "t.start()\r\n",
+    "\r\n",
+    "@app.get(\"/api/sensors\")\r\n",
+    "def get_sensors():\r\n",
+    "    return context\r\n",
+    "\r\n",
+    "app.run()\r\n",
+    "\r\n",
+    "t.join()"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
