--- a/100_problemas.ipynb
+++ b/100_problemas.ipynb
@@ -1871,6 +1871,40 @@
    ],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 25. Trabajar con el sistema operativo\r\n",
+    "\r\n",
+    "El sistema operativo es la base donde residen y se ejecutan todos los programas. Este resuelve las operaciones más avanzadas del sistema como mandar a imprimir, asignar memoria a los programas, bloquear algún proceso específico, conectarse a los periféricos con drivers, asignar recursos avanzados como uso del GPU o la memoria gráfica, etc.\r\n",
+    "\r\n",
+    "Existen principalmente dos arquitecturas principales de Sistemas Operativos (`UNIX` y `Win`), estas arquitecturas proveen interfaces primarias como la línea de comandos y el manejo de hilos, procesos, etc.\r\n",
+    "\r\n",
+    "En python podemos lanzar procesos al sistema operativo, para complementar el uso de nuestros programas. Por ejemplo, si necesitamos mandar a imprimir un documento, en lugar de instalar y aprender a usar librerías complejas de python, o que ni siquiera existen, podemos mandar comandos directos al sistema operativo, para que él realice ese tipo de tareas."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "import subprocess\r\n",
+    "\r\n",
+    "command = ['date', '+\"%A %B (%d %m)\"', '-u']\r\n",
+    "\r\n",
+    "process = subprocess.Popen(command, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\r\n",
+    "\r\n",
+    "stdout, stderr = process.communicate()\r\n",
+    "\r\n",
+    "print(\"stdout:\", stdout)\r\n",
+    "print(\"stderr:\", stderr)\r\n",
+    "\r\n",
+    "for line in stdout.decode('utf-8').split(\"\\n\"):\r\n",
+    "    print(line)"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
